--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Alkatra:wght@500&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-        <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 
     <title>Flores exóticas</title>
 
 </head>
 
-<body>
+
     <div class="header">
         <div class="shape">
             <svg viewBox="0 0 1500 200">
@@ -40,23 +40,26 @@
                     <img class="logo" src="img/marco.png" alt="Reino floral">
                 </a>
                 <h1>Reino floral</h1>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <div class="container">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavbar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <section class="buttons">
-                    <a href="pags/mapa.html" class=" tres bi bi-geo-fill" data-bs-toggle="tooltip"
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <section class="buttons">
+                        <a href="pags/mapa.html" class=" tres bi bi-geo-fill" data-bs-toggle="tooltip"
                         title="Donde esncontrarlas"></a>
-                    <a href="compras/index2.php" class=" bi bi-bag-heart-fill" data-bs-toggle="tooltip"
+                        <a href="pags/video.html" class="cuatro bi bi-youtube" data-bs-toggle="tooltip" title="Video"></a>
+                        <a href="compras/index2.php" class=" bi bi-bag-heart-fill" data-bs-toggle="tooltip"
                         title="Tienda"></a>
-                    <a href="formulario.php" class="bi bi-card-text" data-bs-toggle="tooltip" title="Formulario"></a>
-                    <a href="config/login.php" class=" bi bi-person-fill" data-bs-toggle="tooltip" title="Login"></a>
-                </section>
+                        <a href="formulario.php" class="bi bi-card-text" data-bs-toggle="tooltip" title="Formulario"></a>
+                        <a href="config/login.html" class=" bi bi-person-fill" data-bs-toggle="tooltip" title="Login"></a>
+                    </section>
+                </div>
             </div>
         </nav>
     </header>
 
-    </div>
+    <body>
     <div class="container-fluid mt-4">
         <div class="row">
             <div class="col-sm-10 offset-sm-1">
@@ -359,35 +362,35 @@
     <main>
         <div class="icon">
             <svg heigth="80" width="80">
-                <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
+                <circle cx="40" cy="40" r=35 stroke="pink" stroke-width="4" fill="none" ></circle>
             </svg>
             <i class='bx bxl-instagram'></i>
         </div>
 
         <div class="icon">
             <svg heigth="80" width="80">
-                <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
+                <circle cx="40" cy="40" r=35 stroke="blue" stroke-width="4" fill="none" ></circle>
             </svg>
             <i class='bx bxl-facebook-circle'></i>
         </div>
 
         <div class="icon">
             <svg heigth="80" width="80">
-                <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
+                <circle cx="40" cy="40" r=35 stroke="green" stroke-width="4" fill="none" ></circle>
             </svg>
             <i class='bx bxl-whatsapp' ></i>
         </div>
 
         <div class="icon">
-            <svg heigth="80" width="80">
-                <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
+            <svg heigth="60" width="6080">
+                <circle cx="40" cy="40" r=35 stroke="skyblue" stroke-width="4" fill="none" ></circle>
             </svg>
             <i class='bx bxl-twitter' ></i>
         </div>
         
     </main>
     <hr>
-<div class="header  position-relative">
+    <div class="header  position-relative">
         <video src="vid/video1.mp4" autoplay loop muted playsinline></video>
         <div class="shape">  
           <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 1" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150">
