--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
@@ -383,9 +384,11 @@
 
         <div class="icon">
             <svg heigth="60" width="6080">
-                <circle cx="40" cy="40" r=35 stroke="skyblue" stroke-width="4" fill="none" ></circle>
+                <circle cx="40" cy="40" r=35 stroke="skyblue" stroke-width="4" fill="none"></circle>
+
             </svg>
             <i class='bx bxl-twitter' ></i>
+            
         </div>
         
     </main>
@@ -528,5 +531,7 @@
           </svg>
         </div>
       </div>
+
+       <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 </html>
