--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                         <a href="pags/mapa.html" class=" tres bi bi-geo-fill" data-bs-toggle="tooltip"
                         title="Donde esncontrarlas"></a>
                         <a href="pags/video.html" class="cuatro bi bi-youtube" data-bs-toggle="tooltip" title="Video"></a>
-                        <a href="compras/index2.php" class=" bi bi-bag-heart-fill" data-bs-toggle="tooltip"
+                        <a href="compras.html" class=" bi bi-bag-heart-fill" data-bs-toggle="tooltip"
                         title="Tienda"></a>
-                        <a href="formulario.php" class="bi bi-card-text" data-bs-toggle="tooltip" title="Formulario"></a>
-                        <a href="config/login.html" class=" bi bi-person-fill" data-bs-toggle="tooltip" title="Login"></a>
+                        <a href="formulario.html" class="bi bi-card-text" data-bs-toggle="tooltip" title="Formulario"></a>
+                        <a href="login.html" class=" bi bi-person-fill" data-bs-toggle="tooltip" title="Login"></a>
                     </section>
                 </div>
             </div>
