--- a/compras.html
+++ b/compras.html
@@ -48,9 +48,8 @@
                     <section class="buttons">
                         <a href="pags/mapa.html" class=" tres bi bi-geo-fill" data-bs-toggle="tooltip"
                         title="Donde esncontrarlas"></a>
-                        <a href="pags/video.html" class="cuatro bi bi-youtube" data-bs-toggle="tooltip" title="Video"></a>
-                        <a href="formulario.php" class="bi bi-card-text" data-bs-toggle="tooltip" title="Formulario"></a>
-                        <a href="config/login.php" class=" bi bi-person-fill" data-bs-toggle="tooltip" title="Login"></a>
+                        <a href="formulario.html" class="bi bi-card-text" data-bs-toggle="tooltip" title="Formulario"></a>
+                        <a href="login.html" class=" bi bi-person-fill" data-bs-toggle="tooltip" title="Login"></a>
                     </section>
                 </div>
             </div>
