--- a/formulario.html
+++ b/formulario.html
@@ -1,49 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
+
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<title>Flores</title>
-	<meta name="keywords" content="">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<link rel="icon" href="img/1.svg">
-	<link rel="stylesheet" href="css/estilos.css">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-	<script src="js/bootstrap.bundle.min.js" type="text/javascript"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="author" content="Irenka Ferrusco Santillán">
+    <link rel="icon" href="./img/marco.png">
+    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Alkatra:wght@500&display=swap" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+
+    <title>Formulario</title>
+
 </head>
 
 
-	<div class="header">
-		<div class="shape">
-			<svg viewBox="0 0 1500 200">
-				<path d="m 0,240 h 1500.4828 v -71.92164 c 0,0 -286.2763,-81.79324 -743.19024, -81.79324 C 300.37862,86.28512 0,168.07836 0,168.07836 Z"/>
-			</svg>
-		</div>
-	</div>
-	<header class="navegacion">
-		<nav class="navbar navbar-expand-sm bg-dark navbar-dark  fixed-top text-uppercase pt-4">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="#">
-					<img class="logo" src="img/1.svg" alt="Reino floral">
-				</a>
-				<h1>Reino floral</h1>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=#collapsibleNavbar">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<section class="buttons">
-					<a href="pags/mapa.html" class=" tres bi bi-geo-fill" data-bs-toggle="tooltip" title="Donde esncontrarlas"></a>
-					<a href="pags/video.html" class="cuatro bi bi-youtube" data-bs-toggle="tooltip" title="Video"></a>
-					<a href="index.html" class="bi bi-flower2" data-bs-toggle="tooltip" title="Inicio"></a>
-				</section>
-			</div>
-		</nav>
-	</header>
+    <div class="header">
+        <div class="shape">
+            <svg viewBox="0 0 1500 200">
+                <path
+                    d="m 0,240 h 1500.4828 v -71.92164 c 0,0 -286.2763,-81.79324 -743.19024, -81.79324 C 300.37862,86.28512 0,168.07836 0,168.07836 Z"/>
+            </svg>
+        </div>
+    </div>
+    
+    <header class="navegacion">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark  fixed-top text-uppercase pt-4">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img class="logo" src="img/marco.png" alt="Reino floral">
+                </a>
+                <h1>Reino floral</h1>
+                <div class="container">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <section class="buttons">
+                        <a href="pags/mapa.html" class=" tres bi bi-geo-fill" data-bs-toggle="tooltip"
+                        title="Donde esncontrarlas"></a>
+                        
+                        <a href="compras.html" class=" bi bi-bag-heart-fill" data-bs-toggle="tooltip"
+                        title="Tienda"></a>
+                        <a href="login.html" class=" bi bi-person-fill" data-bs-toggle="tooltip" title="Login"></a>
+                    </section>
+                </div>
+            </div>
+        </nav>
+    </header>
+
 <body>
 
 <div class="container-fluid">
