--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
                     <section class="buttons">
                         <a href="pags/mapa.html" class=" tres bi bi-geo-fill" data-bs-toggle="tooltip"
                         title="Donde esncontrarlas"></a>
-                        <a href="compras/index2.php" class=" bi bi-bag-heart-fill" data-bs-toggle="tooltip"
+                        <a href="compras.html" class=" bi bi-bag-heart-fill" data-bs-toggle="tooltip"
                         title="Tienda"></a>
                         <a href="formulario.html" class="bi bi-card-text" data-bs-toggle="tooltip" title="Formulario"></a>
                 </section>
